--- a/css/stackedCards.css
+++ b/css/stackedCards.css
@@ -3,14 +3,13 @@
 }
 body {
     color: #444;
+    overflow-y: scroll;
 }
 html {
-    height: 100%;
     background-color: #fcfcfc;
 }
 body {
     width:  100%;
-    height: 100%;
     min-height: 100%;
     margin: 0px;
     padding: 0px;
